# snowlit

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  snowlit.py
.github/workflows/: docker-build.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  ingress.yaml  service.yaml
snowlit/: Dockerfile  pyproject.toml  snowlit.py
snowql/: Dockerfile  api.py  pyproject.toml  requirements.txt  test_api.py
